--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,26 +1,37 @@
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to "sample app", root_path, id: "logo" %>
-
-        <nav>
-
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",    root_path %></li>
-            <li><%= link_to "Help",    help_path %></li>
-            <li><%= link_to "Log in", login_path %></li>
-          </ul>
-          <div class="dropdown">
-                <button class="dropbtn">Dropdown
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="http://localhost:3000/sessions/new">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <%= link_to "sample app", root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Help", help_path %></li>
+        <li><%= link_to "Log in", login_path %></li> <!--login_path-->
+        <% if logged_in? %>
+          <li><%= link_to "Users", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+      </ul>
+    </nav>
   </div>
-
-
-        </nav>
-      </div>
-    </header>
+</header>    
+<!--
+<div class="dropdown-content">
+          <a href="http://localhost:3000/sessions/new">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+         </div>
+-->         
