--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,6 +8,6 @@
 
 
 
-<%= link_to 'Back', users_path %> |
-<%= link_to 'lognin', login_path %> |
-<%= link_to 'microposts', microposts_path %>    
+<%= link_to 'Back', users_path, class: "btn btn-primary" %> |
+<%= link_to 'lognin', login_path, class: "btn btn-primary" %> |
+<%= link_to 'microposts', microposts_path, class: "btn btn-primary" %>    
