--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %> |
-<%= link_to 'New User', new_user_path %> |
-<%= link_to 'microposts', microposts_path %> 
+<%= link_to 'Edit', edit_user_path(@user), class: "btn btn-primary" %> |
+<%= link_to 'Back', users_path, class: "btn btn-primary" %> |
+<%= link_to 'New User', new_user_path, class: "btn btn-primary" %> |
+<%= link_to 'microposts', microposts_path, class: "btn btn-primary" %> 
