--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -29,7 +29,8 @@
       <a href="http://gravatar.com/emails" target="_blank" id: "img2",>change</a>
     </div>
 
-<!--Кстати, target= "_blank" в ссылке на граватар — это изящный фокус для того, чтобы заставить браузер открыть страницу в новом окне или вкладке, весьма удобное поведение при переходе по ссылке на сторонний сайт.
+<!--значительное совпадение предполагает вынесение повторяющегося кода в партиал
+Кстати, target= "_blank" в ссылке на граватар — это изящный фокус для того, чтобы заставить браузер открыть страницу в новом окне или вкладке, весьма удобное поведение при переходе по ссылке на сторонний сайт.
       как же Rails узнает, что нужно использовать запрос POST для новых пользователей и PATCH для редактирования? Ответ кроется в том, что посредством логического метода Active Record new_record? можно определить, является ли пользователь новым, или он уже существует в базе данных:
 
  rails console
