--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,31 +1,15 @@
 <% provide(:title, 'All users') %>
+<h1>All users</h1>
 
-<p id="notice"><%= notice %></p>
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
+      <%= link_to (gravatar_for @user), edit_user_path(@user), size: 50 %>
+      <%= link_to user.name, user %>
+    </li>
+  <% end %>
+</ul>
 
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 <%= link_to 'home', static_pages_home_path %> |
 <%= link_to 'New User', new_user_path %> |
 <%= link_to 'microposts', microposts_path %>
