--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
+<%= will_paginate %>
+
 <ul class="users">
   <% @users.each do |user| %>
     <li>
@@ -9,6 +11,8 @@
     </li>
   <% end %>
 </ul>
+
+<%= will_paginate %>
 
 <%= link_to 'home', static_pages_home_path %> |
 <%= link_to 'New User', new_user_path %> |
