--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,17 +4,8 @@
 <%= will_paginate %>
 
 <ul class="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to gravatar_for(user), user, size: 50 %>
-      <%= link_to user.name, user %>
-      <%= render user %>
-      <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %> 
-  <% end %>  
-    </li>
-  <% end %>
+  <%= render @users %>
+  
 </ul>
 
 <%= will_paginate %>
