--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,7 +1,9 @@
 <h1>Sample App</h1>
 
-<p>Привет, <%= @user.name %>!</p>
 
+<p>
+  <%= @greeting %>, find me in app/views/user_mailer/account_activation.html.erb
+</p>
 <p>
 Добро пожаловать в Учебное Приложение! Перейдите по ссылке для активации аккаунта:
 </p>
